--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
+    ext.dagger2_version = '2.16'
+    ext.retrofit_version = '2.4.0'
+    ext.lifecycle_version = '2.0.0'
     repositories {
         google()
         jcenter()
